--- a/packages/imperative/src/index.html
+++ b/packages/imperative/src/index.html
@@ -11,9 +11,7 @@
     </header>
 
     <main>
-      <div class="process">
-        <h2>Process: Time <small>(Running)</small></h2>
-        <button>Stop</button>
+      <div class="process-list">
       </div>
     </main>
   </div>
